--- a/seoyun.html
+++ b/seoyun.html
@@ -2,13 +2,21 @@
 <html>
     <head>
         <title>Page Title</title>
+        <style>
+            h2, h4, h6{
+                background-color: mistyrose;
+            }
+            h3, h5 {
+                background-color: bisque;
+            }
+        </style>
     </head>
     <body>
 
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <h1 style="color:darkslateblue">Seoyun</h1>
+        <p>Hello everyone !!!!!</p>
 
-        <h1>Heading 1</h1>
+        <h1 style="background-color: bisque">Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
@@ -34,8 +42,11 @@
 
         <img src="apple.jpeg" alt="W3Schools.com" width="250" height="142">
 
-        <input type="button" value="경고창" onclick="alert('클릭되었습니다.')">
+        <input type="button" value="애플이" onclick="alert('애플이입니당')">
 
+        <br><br>
+        <p>채은's page</p>
+        <iframe src="chaeeun.html" width="100%" height="500"></iframe>
 
 
     </body>
