--- a/chaeeun.html
+++ b/chaeeun.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Chaeeun Page</title>
+    <!-- <style>
+        h1 {
+            background-color: rgb(179, 179, 255);
+        }
+    </style> -->
   </head>
   <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <img src="./roa.gif" width="100" />
+    <h2>여러분 정말 고생 많았어용</h2>
+    <h1>저희 모두! 앞으로도 파이팅이에요~!!!</h1>
+    <hr />
+    <br />
+    <!-- <h1 style="color: brown">This is a Heading</h1> -->
+    <!-- <p>This is a paragraph.</p>
 
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
+    <h1>Heading 4</h4>
     <br />
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+    <h1>Heading 5</h5>
+    <h1>Heading 6</h6>
 
     <hr />
 
@@ -26,10 +36,28 @@
       <li>사과</li>
       <li>오렌지</li>
       <li>메론</li>
-    </ul>
+    </ul> -->
 
-    <img src="./chunsic.png" alt="춘식이" width="154" height="142" />
+    <!-- <iframe src="./seoyun.html" width="100%" height="500"></iframe> -->
 
-    <input type="button" value="경고창" onclick='alert("클릭되었습니다.")' />
+    <!-- <img src="./chunsic.png" alt="춘식이" width="154" height="142" /> -->
+
+    <input
+      type="button"
+      value="선우님 페이지로 이동"
+      onclick="location.href='./SUNWOO.html'"
+    />
+    <input
+      type="button"
+      value="송하님 페이지로 이동"
+      onclick="location.href='./songha.html'"
+    />
+    <input
+      type="button"
+      value="서윤님 페이지로 이동"
+      onclick="location.href='./seoyun.html'"
+    />
+
+    <input type="button" value="?" onclick='alert("모두 잘될거예유 ㅎㅎ")' />
   </body>
 </html>
